--- a/.env
+++ b/.env
@@ -17,3 +17,14 @@
 APP_ENV=dev
 APP_SECRET=dc8fbc7fd056ea18796a99fb899f3534
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://converter_db:converter_db@127.0.0.1:3306/converter_db?serverVersion=mariadb-10.3.31"
+
+###< doctrine/doctrine-bundle ###
