--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /vendor/
 ###< symfony/framework-bundle ###
 /.idea
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
