--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^12.2.0",
         "stimulus": "^2.0.0",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -20,6 +23,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@popperjs/core": "^2.10.2"
+        "@popperjs/core": "^2.10.2",
+        "axios": "^0.23.0"
     }
 }
